Issue #162: Handle -XX:-PrintGCTimeStamps -XX:+PrintGCDateStamps (datestamp only)