@@ -21,11 +21,26 @@ package org.eclipselabs.garbagecat.util.jdk;
 public final class JdkRegEx {
 
     /**
-     * Timestamp. Milliseconds since JVM started.
-     * 
-     * For example: 487.020
+     * A memory address.
      */
-    public static final String TIMESTAMP = "(\\d{0,12}[\\.\\,]\\d{3})";
+    public static final String ADDRESS = "(0x[0-9a-f]{16})";
+
+    /**
+     * Allocation rate.
+     * 
+     * For example: 328.75 MB/s
+     */
+    public static final String ALLOCATION_RATE = "\\d{1,6}(\\.\\d{2})? [BKM]B\\/s";
+
+    /**
+     * Blank line.
+     */
+    public static final String BLANK_LINE = "^\\s+$";
+
+    /**
+     * Byte units identifier.
+     */
+    public static final String BYTES = "B";
 
     /**
      * Datestamp. Absolute date/time the JVM uses with <code>-XX:+PrintGCDateStamps</code>.
@@ -40,6 +55,11 @@ public final class JdkRegEx {
             + "([-\\+]\\d{4}))";
 
     /**
+     * Logging event with only the time decorator (datestamp).
+     */
+    public static final String DATESTAMP_EVENT = "^" + JdkRegEx.DATESTAMP + ": (?!" + JdkRegEx.TIMESTAMP + ").*";
+
+    /**
      * Datetime.
      * 
      * For example:
@@ -49,18 +69,66 @@ public final class JdkRegEx {
     public static final String DATETIME = "\\d{4}-\\d{2}-\\d{2} \\d{2}:\\d{2}:\\d{2}";
 
     /**
-     * The size of memory in kilobytes. Sometimes there is a space between the number and the "K" units.
+     * Regular expression for recognized decorations prepending logging.
      * 
-     * For example: 27808K, 16172 K
+     * <p>
+     * 1) -XX:+PrintGCTimeStamps:
+     * </p>
      * 
-     * TODO: Combine with SIZE_K?
+     * <pre>
+     * 2020-03-10T08:03:29.311-0400: 0.373:
+     * </pre>
+     * 
+     * <p>
+     * 2) -XX:-PrintGCTimeStamps -XX:+PrintGCDateStamps:
+     * </p>
+     * 
+     * <pre>
+     * 2020-03-10T08:03:29.311-0400:
+     * </pre>
+     * 
+     * <p>
+     * 3) -XX:+PrintGCTimeStamps -XX:-PrintGCDateStamps:
+     * </p>
+     * 
+     * <pre>
+     * 0.373:
+     * </pre>
      */
-    public static final String SIZE_K = "(\\d{1,9})[ ]?K";
+    public static final String DECORATOR = "(" + DATESTAMP + "|" + JdkRegEx.TIMESTAMP + "):( " + JdkRegEx.TIMESTAMP
+            + ":)?";
 
     /**
-     * Byte units identifier.
+     * The duration of the event in seconds with 7-8 decimal places.
+     * 
+     * For example: 0.0225213 secs, 0.00376500 secs
      */
-    public static final String BYTES = "B";
+    public static final String DURATION = "(\\d{1,4}[\\.\\,]\\d{7,8})( sec)?(s)?";
+
+    /**
+     * The duration of the event as a fraction of a time period.
+     * 
+     * For example: 2.272/29.793 secs
+     */
+    public static final String DURATION_FRACTION = "(\\d{1,4}[\\.\\,]\\d{3}\\/\\d{1,5}[\\.\\,]\\d{3}) secs";
+
+    /**
+     * Gigabyte units identifier.
+     */
+    public static final String GIGABYTES = "G";
+
+    /**
+     * Data when the CMS collector is run in incremental mode with the <code>-XX:+CMSIncrementalMode</code> JVM option.
+     * In this mode, the CMS collector does not hold the processor(s) for the entire long concurrent phases but
+     * periodically stops them and yields the processor back to other threads in the application. It divides the work to
+     * be done in concurrent phases into small chunks called duty cycles and schedules them between minor collections.
+     * This is very useful for applications that need low pause times and are run on machines with a small number of
+     * processors. The icms_dc value is the time in percentage that the concurrent work took between two young
+     * generation collections.
+     * 
+     * For example: icms_dc=70
+     */
+    public static final String ICMS_DC_BLOCK = "( icms_dc=\\d{1,3} )";
 
     /**
      * Kilobyte units identifier.
@@ -73,9 +141,37 @@ public final class JdkRegEx {
     public static final String MEGABYTES = "M";
 
     /**
-     * Gigabyte units identifier.
+     * Units for JVM options that take a byte number.
+     * 
+     * For example: -Xss128k -Xmx2048m -Xms2G
      */
-    public static final String GIGABYTES = "G";
+    public static final String OPTION_SIZE = "(b|B|k|K|m|M|g|G)";
+
+    /**
+     * Percent.
+     * 
+     * For example: avg 54.8%
+     */
+    public static final String PERCENT = "\\d{1,3}\\.\\d%";
+
+    /**
+     * <code>-XX:+PrintPromotionFailure</code> output.
+     * 
+     * For example:
+     * 
+     * (0: promotion failure size = 200) (1: promotion failure size = 8) (2: promotion failure size = 200) (3: promotion
+     * failure size = 200) (4: promotion failure size = 200) (5: promotion failure size = 200) (6: promotion failure
+     * size = 200) (7: promotion failure size = 200) (8: promotion failure size = 10) (9: promotion failure size = 10)
+     * (10: promotion failure size = 10) (11: promotion failure size = 200) (12: promotion failure size = 200) (13:
+     * promotion failure size = 10) (14: promotion failure size = 200) (15: promotion failure size = 200) (16: promotion
+     * failure size = 200) (17: promotion failure size = 200) (18: promotion failure size = 200) (19: promotion failure
+     * size = 200) (20: promotion failure size = 10) (21: promotion failure size = 200) (22: promotion failure size =
+     * 10) (23: promotion failure size = 45565) (24: promotion failure size = 10) (25: promotion failure size = 4) (26:
+     * promotion failure size = 200) (27: promotion failure size = 200) (28: promotion failure size = 10) (29: promotion
+     * failure size = 200) (30: promotion failure size = 200) (31: promotion failure size = 200) (32: promotion failure
+     * size = 200)
+     */
+    public static final String PRINT_PROMOTION_FAILURE = "( \\(\\d{1,2}: promotion failure size = \\d{1,10}\\) ){1,64}";
 
     /**
      * The size of memory in bytes (B), kilobytes (K), megabytes (M), or gigabytes (G) to a whole number or to one
@@ -99,75 +195,20 @@ public final class JdkRegEx {
     public static final String SIZE_BYTES = "(\\d{1,11})";
 
     /**
-     * A memory address.
-     */
-    public static final String ADDRESS = "(0x[0-9a-f]{16})";
-
-    /**
-     * The duration of the event in seconds with 7-8 decimal places.
+     * The size of memory in kilobytes. Sometimes there is a space between the number and the "K" units.
      * 
-     * For example: 0.0225213 secs, 0.00376500 secs
-     */
-    public static final String DURATION = "(\\d{1,4}[\\.\\,]\\d{7,8})( sec)?(s)?";
-
-    /**
-     * The duration of the event as a fraction of a time period.
+     * For example: 27808K, 16172 K
      * 
-     * For example: 2.272/29.793 secs
+     * TODO: Combine with SIZE_K?
      */
-    public static final String DURATION_FRACTION = "(\\d{1,4}[\\.\\,]\\d{3}\\/\\d{1,5}[\\.\\,]\\d{3}) secs";
+    public static final String SIZE_K = "(\\d{1,9})[ ]?K";
 
     /**
-     * Data when the CMS collector is run in incremental mode with the <code>-XX:+CMSIncrementalMode</code> JVM option.
-     * In this mode, the CMS collector does not hold the processor(s) for the entire long concurrent phases but
-     * periodically stops them and yields the processor back to other threads in the application. It divides the work to
-     * be done in concurrent phases into small chunks called duty cycles and schedules them between minor collections.
-     * This is very useful for applications that need low pause times and are run on machines with a small number of
-     * processors. The icms_dc value is the time in percentage that the concurrent work took between two young
-     * generation collections.
+     * Timestamp. Milliseconds since JVM started.
      * 
-     * For example: icms_dc=70
+     * For example: 487.020
      */
-    public static final String ICMS_DC_BLOCK = "( icms_dc=\\d{1,3} )";
-
-    /**
-     * Permanent generation collection class unloading.
-     * 
-     * For example:
-     * 
-     * [Unloading class sun.reflect.GeneratedSerializationConstructorAccessor13565]
-     */
-    public static final String UNLOADING_CLASS_BLOCK = "\\[Unloading class [a-zA-Z\\.\\$\\d_]+\\]";
-
-    /**
-     * Blank line.
-     */
-    public static final String BLANK_LINE = "^\\s+$";
-
-    /**
-     * Percent.
-     * 
-     * For example: avg 54.8%
-     */
-    public static final String PERCENT = "\\d{1,3}\\.\\d%";
-
-    /**
-     * Allocation rate.
-     * 
-     * For example: 328.75 MB/s
-     */
-    public static final String ALLOCATION_RATE = "\\d{1,6}(\\.\\d{2})? [BKM]B\\/s";
-
-    /**
-     * System.gc() trigger. Explicit garbage collection invoked.
-     */
-    public static final String TRIGGER_SYSTEM_GC = "System(.gc\\(\\))?";
-
-    /**
-     * Metadata GC Threshold trigger. When the Metaspace is resized. The JVM has failed to allocate memory for something
-     * that should be stored in Metaspace and does a full collection before attempting to resize the Metaspace.
-     */
-    public static final String TRIGGER_METADATA_GC_THRESHOLD = "Metadata GC Threshold";
+    public static final String TIMESTAMP = "(\\d{0,12}[\\.\\,]\\d{3})";
 
     /**
      * Allocation Failure trigger.
@@ -175,66 +216,9 @@ public final class JdkRegEx {
     public static final String TRIGGER_ALLOCATION_FAILURE = "Allocation Failure";
 
     /**
-     * <p>
-     * To Space Exhausted trigger. A G1_YOUNG_PAUSE, G1_MIXED_PAUSE, or G1_YOUNG_INITIAL_MARK collection cannot happen
-     * due to "to-space exhausted". There is not enough free space in the heap for survived and/or promoted objects, and
-     * the heap cannot be expanded. This is a very expensive operation. Sometimes the collector's ergonomics can resolve
-     * the issue by dynamically re-sizing heap regions. If it cannot, it invokes a G1_FULL_GC in an attempt to reclaim
-     * enough space to continue. All of the following are possible resolutions:
-     * </p>
-     * 
-     * <ol>
-     * 
-     * <li>Increase the heap size.</li>
-     * <li>Increase <code>-XX:G1ReservePercent</code> and the heap size to increase the amount of to-space reserve
-     * memory.</li>
-     * <li>Reduce the <code>-XX:InitiatingHeapOccupancyPercent</code> (default 45) to start the marking cycle earlier.
-     * </li>
-     * <li>Increase the number of parallel marking threads with <code>-XX:ConcGCThreads</code>. For example:
-     * <code>-XX:ConcGCThreads=16</code>.
-     * </ol>
+     * Ctrl-Break with -XX:+PrintClassHistogram trigger causes a full GC.
      */
-    public static final String TRIGGER_TO_SPACE_EXHAUSTED = "to-space exhausted";
-
-    /**
-     * <p>
-     * To Space Overflow trigger. A G1_YOUNG_PAUSE, G1_MIXED_PAUSE, or G1_YOUNG_INITIAL_MARK collection cannot happen
-     * due to "to-space oeverflow". There is not enough free space in the heap for survived and/or promoted objects, and
-     * the heap cannot be expanded. This is a very expensive operation. Sometimes the collector's ergonomics can resolve
-     * the issue by dynamically re-sizing heap regions. If it cannot, it invokes a G1_FULL_GC in an attempt to reclaim
-     * enough space to continue. All of the following are possible resolutions:
-     * </p>
-     * 
-     * <ol>
-     * 
-     * <li>Increase the heap size.</li>
-     * <li>Increase <code>-XX:G1ReservePercent</code> and the heap size to increase the amount of to-space reserve
-     * memory.</li>
-     * <li>Reduce the <code>-XX:InitiatingHeapOccupancyPercent</code> (default 45) to start the marking cycle earlier.
-     * </li>
-     * <li>Increase the number of parallel marking threads with <code>-XX:ConcGCThreads</code>. For example:
-     * <code>-XX:ConcGCThreads=16</code>.
-     * </ol>
-     */
-    public static final String TRIGGER_TO_SPACE_OVERFLOW = "to-space overflow";
-
-    /**
-     * G1 Evacuation Pause trigger. Live objects are copied out of one region (evacuated) to another region to free
-     * contiguous space. For both young and mixed collections.
-     */
-    public static final String TRIGGER_G1_EVACUATION_PAUSE = "G1 Evacuation Pause";
-
-    /**
-     * GCLocker Initiated GC trigger. A GC initiated after the JNI critical region is released. This is caused when a GC
-     * is requested when a thread is in the JNI critical region. GC is blocked until all threads exit the JNI critical
-     * region.
-     */
-    public static final String TRIGGER_GCLOCKER_INITIATED_GC = "GCLocker Initiated GC";
-
-    /**
-     * CMS Initial Mark trigger
-     */
-    public static final String TRIGGER_CMS_INITIAL_MARK = "CMS Initial Mark";
+    public static final String TRIGGER_CLASS_HISTOGRAM = "Class Histogram";
 
     /**
      * CMS Final Remark trigger
@@ -242,39 +226,9 @@ public final class JdkRegEx {
     public static final String TRIGGER_CMS_FINAL_REMARK = "CMS Final Remark";
 
     /**
-     * Ctrl-Break with -XX:+PrintClassHistogram trigger causes a full GC.
+     * CMS Initial Mark trigger
      */
-    public static final String TRIGGER_CLASS_HISTOGRAM = "Class Histogram";
-
-    /**
-     * Run after TRIGGER_METADATA_GC_THRESHOLD fails to resize the Metaspace. A full collection is run to clean up soft
-     * references and free Metaspace. If this fails to free space, OutOfMemoryError is thrown.
-     */
-    public static final String TRIGGER_LAST_DITCH_COLLECTION = "Last ditch collection";
-
-    /**
-     * JVM Tool Interface explicit GC trigger
-     */
-    public static final String TRIGGER_JVM_TI_FORCED_GAREBAGE_COLLECTION = "JvmtiEnv ForceGarbageCollection";
-
-    /**
-     * <p>
-     * Ergonomics trigger. GC happens for a heuristics reason. A heuristic is a rule of thumb or pattern the JVM uses to
-     * achieve a performance goal or improve performance.
-     * </p>
-     * 
-     * <p>
-     * For example:
-     * </p>
-     * 
-     * <ol>
-     * <li>There is not enough old space to handle a young collection, based on promotion statistics. A full collection
-     * is done in an attempt to free space.</li>
-     * <li>The young and/or old spaces need to be resized in an effort to meet a maximum pause time or throughput goal.
-     * A full collection is needed to do the resizing.
-     * </ol>
-     */
-    public static final String TRIGGER_ERGONOMICS = "Ergonomics";
+    public static final String TRIGGER_CMS_INITIAL_MARK = "CMS Initial Mark";
 
     /**
      * <p>
@@ -350,6 +304,70 @@ public final class JdkRegEx {
 
     /**
      * <p>
+     * Ergonomics trigger. GC happens for a heuristics reason. A heuristic is a rule of thumb or pattern the JVM uses to
+     * achieve a performance goal or improve performance.
+     * </p>
+     * 
+     * <p>
+     * For example:
+     * </p>
+     * 
+     * <ol>
+     * <li>There is not enough old space to handle a young collection, based on promotion statistics. A full collection
+     * is done in an attempt to free space.</li>
+     * <li>The young and/or old spaces need to be resized in an effort to meet a maximum pause time or throughput goal.
+     * A full collection is needed to do the resizing.
+     * </ol>
+     */
+    public static final String TRIGGER_ERGONOMICS = "Ergonomics";
+
+    /**
+     * G1 Evacuation Pause trigger. Live objects are copied out of one region (evacuated) to another region to free
+     * contiguous space. For both young and mixed collections.
+     */
+    public static final String TRIGGER_G1_EVACUATION_PAUSE = "G1 Evacuation Pause";
+
+    /**
+     * Humongous object allocation failed trigger.
+     */
+    public static final String TRIGGER_G1_HUMONGOUS_ALLOCATION = "G1 Humongous Allocation";
+
+    /**
+     * GCLocker Initiated GC trigger. A GC initiated after the JNI critical region is released. This is caused when a GC
+     * is requested when a thread is in the JNI critical region. GC is blocked until all threads exit the JNI critical
+     * region.
+     */
+    public static final String TRIGGER_GCLOCKER_INITIATED_GC = "GCLocker Initiated GC";
+
+    /**
+     * Heap dump initiated gc trigger.
+     */
+    public static final String TRIGGER_HEAP_DUMP_INITIATED_GC = "Heap Dump Initiated GC";
+
+    /**
+     * Heap inspection initiated gc trigger.
+     */
+    public static final String TRIGGER_HEAP_INSPECTION_INITIATED_GC = "Heap Inspection Initiated GC";
+
+    /**
+     * JVM Tool Interface explicit GC trigger
+     */
+    public static final String TRIGGER_JVM_TI_FORCED_GAREBAGE_COLLECTION = "JvmtiEnv ForceGarbageCollection";
+
+    /**
+     * Run after TRIGGER_METADATA_GC_THRESHOLD fails to resize the Metaspace. A full collection is run to clean up soft
+     * references and free Metaspace. If this fails to free space, OutOfMemoryError is thrown.
+     */
+    public static final String TRIGGER_LAST_DITCH_COLLECTION = "Last ditch collection";
+
+    /**
+     * Metadata GC Threshold trigger. When the Metaspace is resized. The JVM has failed to allocate memory for something
+     * that should be stored in Metaspace and does a full collection before attempting to resize the Metaspace.
+     */
+    public static final String TRIGGER_METADATA_GC_THRESHOLD = "Metadata GC Threshold";
+
+    /**
+     * <p>
      * Promotion failed trigger.
      * </p>
      * 
@@ -378,58 +396,62 @@ public final class JdkRegEx {
     public static final String TRIGGER_PROMOTION_FAILED = "promotion failed";
 
     /**
-     * Heap inspection initiated gc trigger.
+     * System.gc() trigger. Explicit garbage collection invoked.
      */
-    public static final String TRIGGER_HEAP_INSPECTION_INITIATED_GC = "Heap Inspection Initiated GC";
+    public static final String TRIGGER_SYSTEM_GC = "System(.gc\\(\\))?";
 
     /**
-     * Heap dump initiated gc trigger.
-     */
-    public static final String TRIGGER_HEAP_DUMP_INITIATED_GC = "Heap Dump Initiated GC";
-
-    /**
-     * Humongous object allocation failed trigger.
-     */
-    public static final String TRIGGER_G1_HUMONGOUS_ALLOCATION = "G1 Humongous Allocation";
-
-    /**
-     * Units for JVM options that take a byte number.
+     * <p>
+     * To Space Exhausted trigger. A G1_YOUNG_PAUSE, G1_MIXED_PAUSE, or G1_YOUNG_INITIAL_MARK collection cannot happen
+     * due to "to-space exhausted". There is not enough free space in the heap for survived and/or promoted objects, and
+     * the heap cannot be expanded. This is a very expensive operation. Sometimes the collector's ergonomics can resolve
+     * the issue by dynamically re-sizing heap regions. If it cannot, it invokes a G1_FULL_GC in an attempt to reclaim
+     * enough space to continue. All of the following are possible resolutions:
+     * </p>
      * 
-     * For example: -Xss128k -Xmx2048m -Xms2G
+     * <ol>
+     * 
+     * <li>Increase the heap size.</li>
+     * <li>Increase <code>-XX:G1ReservePercent</code> and the heap size to increase the amount of to-space reserve
+     * memory.</li>
+     * <li>Reduce the <code>-XX:InitiatingHeapOccupancyPercent</code> (default 45) to start the marking cycle earlier.
+     * </li>
+     * <li>Increase the number of parallel marking threads with <code>-XX:ConcGCThreads</code>. For example:
+     * <code>-XX:ConcGCThreads=16</code>.
+     * </ol>
      */
-    public static final String OPTION_SIZE = "(b|B|k|K|m|M|g|G)";
+    public static final String TRIGGER_TO_SPACE_EXHAUSTED = "to-space exhausted";
 
     /**
-     * <code>-XX:+PrintPromotionFailure</code> output.
+     * <p>
+     * To Space Overflow trigger. A G1_YOUNG_PAUSE, G1_MIXED_PAUSE, or G1_YOUNG_INITIAL_MARK collection cannot happen
+     * due to "to-space oeverflow". There is not enough free space in the heap for survived and/or promoted objects, and
+     * the heap cannot be expanded. This is a very expensive operation. Sometimes the collector's ergonomics can resolve
+     * the issue by dynamically re-sizing heap regions. If it cannot, it invokes a G1_FULL_GC in an attempt to reclaim
+     * enough space to continue. All of the following are possible resolutions:
+     * </p>
+     * 
+     * <ol>
+     * 
+     * <li>Increase the heap size.</li>
+     * <li>Increase <code>-XX:G1ReservePercent</code> and the heap size to increase the amount of to-space reserve
+     * memory.</li>
+     * <li>Reduce the <code>-XX:InitiatingHeapOccupancyPercent</code> (default 45) to start the marking cycle earlier.
+     * </li>
+     * <li>Increase the number of parallel marking threads with <code>-XX:ConcGCThreads</code>. For example:
+     * <code>-XX:ConcGCThreads=16</code>.
+     * </ol>
+     */
+    public static final String TRIGGER_TO_SPACE_OVERFLOW = "to-space overflow";
+
+    /**
+     * Permanent generation collection class unloading.
      * 
      * For example:
      * 
-     * (0: promotion failure size = 200) (1: promotion failure size = 8) (2: promotion failure size = 200) (3: promotion
-     * failure size = 200) (4: promotion failure size = 200) (5: promotion failure size = 200) (6: promotion failure
-     * size = 200) (7: promotion failure size = 200) (8: promotion failure size = 10) (9: promotion failure size = 10)
-     * (10: promotion failure size = 10) (11: promotion failure size = 200) (12: promotion failure size = 200) (13:
-     * promotion failure size = 10) (14: promotion failure size = 200) (15: promotion failure size = 200) (16: promotion
-     * failure size = 200) (17: promotion failure size = 200) (18: promotion failure size = 200) (19: promotion failure
-     * size = 200) (20: promotion failure size = 10) (21: promotion failure size = 200) (22: promotion failure size =
-     * 10) (23: promotion failure size = 45565) (24: promotion failure size = 10) (25: promotion failure size = 4) (26:
-     * promotion failure size = 200) (27: promotion failure size = 200) (28: promotion failure size = 10) (29: promotion
-     * failure size = 200) (30: promotion failure size = 200) (31: promotion failure size = 200) (32: promotion failure
-     * size = 200)
+     * [Unloading class sun.reflect.GeneratedSerializationConstructorAccessor13565]
      */
-    public static final String PRINT_PROMOTION_FAILURE = "( \\(\\d{1,2}: promotion failure size = \\d{1,10}\\) ){1,64}";
-
-    /**
-     * Regular expression for recognized decorations prepending logging.
-     * 
-     * <p>
-     * 1) time: uptime:
-     * </p>
-     * 
-     * <pre>
-     * 2020-03-10T08:03:29.311-0400: 0.373: [Concurrent reset 16991K-&gt;17152K(17408K), 0.435 ms]
-     * </pre>
-     */
-    public static final String DECORATOR = DATESTAMP + ": " + TIMESTAMP + ":";
+    public static final String UNLOADING_CLASS_BLOCK = "\\[Unloading class [a-zA-Z\\.\\$\\d_]+\\]";
 
     /**
      * Make default constructor private so the class cannot be instantiated.
